tests/baselines/reference/for-of49.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of49.ts(3,13): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/for-ofStatements/for-of49.ts(3,21): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of49.ts (2 errors) ====
    var k: string, v: boolean;
    var map = new Map([["", true]]);
    for ([k, ...[v]] of map) {
                ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
                        ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        k;
        v;
    }